Exclude all static libraries from Debian package stripping (#3494)
Strip tools cannot recognize AMDGPU target object files within static
libraries like libclang_rt.builtins.a and libflang_rt.runtime.a, causing
build failures. Generalize the dh_strip exclusion pattern from specific
files to all .a files to prevent these errors while allowing stripping
of other binaries.
Changes:
- Update debian_rules.j2 to use -X.a instead of individual file
exclusions
- Disable the stripping of amdrocm-llvm RPM package by setting
Disable_RPM_STRIP

---------

Co-authored-by: raramakr <raramakr@amd.com>

--- a/build_tools/packaging/linux/package.json
+++ b/build_tools/packaging/linux/package.json
@@ -102,7 +102,8 @@
       }
     ],
     "Gfxarch": "False",
-    "Disable_DWZ": "True"
+    "Disable_DWZ": "True",
+    "Disable_RPM_STRIP": "True"
   },
   {
     "Package": "amdrocm-llvm-devel",
