--- a/profiler/artifact-rocprofiler-sdk.toml
+++ b/profiler/artifact-rocprofiler-sdk.toml
@@ -26,11 +26,13 @@ include = [
   "share/rocprofiler-sdk/**",
   "share/rocprofiler-sdk-rocpd/**",
   "share/rocprofiler-sdk-roctx/**",
+  "share/rocprofiler-sdk-tests/**",
   "lib/python*/**",
 ]
 [components.test."profiler/rocprofiler-sdk/stage"]
 include = [
   "share/rocprofiler-sdk/tests/**",
+  "lib/cmake/**",
 ]
 
 # roctracer
