Revert "Exclude all static libraries from Debian package stripping (#3494)"
This reverts commit e45c216399d8384f831e66c8a5f7c9fbe7e739c1.

--- a/build_tools/packaging/linux/package.json
+++ b/build_tools/packaging/linux/package.json
@@ -102,8 +102,7 @@
       }
     ],
     "Gfxarch": "False",
-    "Disable_DWZ": "True",
-    "Disable_RPM_STRIP": "True"
+    "Disable_DWZ": "True"
   },
   {
     "Package": "amdrocm-llvm-devel",
