--- a/.github/workflows/test_component.yml
+++ b/.github/workflows/test_component.yml
@@ -123,6 +123,7 @@ jobs:
           SHARD_INDEX: ${{ matrix.shard }}
           TOTAL_SHARDS: ${{ fromJSON(inputs.component).total_shards }}
           TEST_TYPE: ${{ fromJSON(inputs.component).test_type }}
+          RUNNER_NAME: ${{ inputs.test_runs_on }}
         run: |
           ${{ fromJSON(inputs.component).test_script }}
 
