--- a/.github/workflows/build_windows_pytorch_wheels_ci.yml
+++ b/.github/workflows/build_windows_pytorch_wheels_ci.yml
@@ -36,7 +36,8 @@ on:
         type: string
         required: true
       cache_type:
-        description: "Compiler cache type: sccache (S3-backed), ccache, or none"
+        description: "Compiler cache type (sccache, ccache, or none)"
+        required: false
         type: string
         default: "sccache"
   workflow_dispatch:
@@ -61,7 +62,7 @@ on:
         type: string
         required: true
       cache_type:
-        description: "Compiler cache type: sccache (S3-backed), ccache, or none"
+        description: "Compiler cache type"
         type: choice
         options:
           - sccache
@@ -84,11 +85,13 @@ jobs:
       # Note the \ here instead of /. This should be used from 'cmd' not 'bash'!
       PACKAGE_DIST_DIR: ${{ github.workspace }}\output\packages\dist
       optional_build_prod_arguments: ""
-      SCCACHE_BUCKET: therock-sccache
+      SCCACHE_BUCKET: therock-ci-pytorch-sccache
       SCCACHE_REGION: us-east-2
       SCCACHE_S3_KEY_PREFIX: "windows/${{ inputs.artifact_group }}/"
       SCCACHE_S3_USE_SSL: "true"
+      SCCACHE_S3_SERVER_SIDE_ENCRYPTION: "true"
       SCCACHE_IDLE_TIMEOUT: "0"
+      SCCACHE_LOG: warn
     defaults:
       run:
         # Note: there are mixed uses of 'bash' (this default) and 'cmd' below
@@ -194,11 +197,11 @@ jobs:
           if [ "${{ inputs.cache_type }}" = "sccache" ]; then
             echo "sccache stats:"
             echo "--------------"
-            sccache --show-stats
+            sccache --show-stats || true
           elif [ "${{ inputs.cache_type }}" = "ccache" ]; then
             echo "ccache stats:"
             echo "-------------"
-            ccache -s -v
+            ccache -s -v || true
           fi
 
       - name: Sanity check wheel
