--- a/.github/workflows/build_portable_linux_pytorch_wheels_ci.yml
+++ b/.github/workflows/build_portable_linux_pytorch_wheels_ci.yml
@@ -143,7 +143,7 @@ jobs:
         uses: aws-actions/configure-aws-credentials@8df5847569e6427dd6c4fb1cf565c83acfa8afa7 # v6.0.0
         with:
           aws-region: us-east-2
-          role-to-assume: arn:aws:iam::692859939525:role/therock-sccache
+          role-to-assume: arn:aws:iam::692859939525:role/therock-ci
 
       - name: Verify sccache
         if: ${{ inputs.cache_type == 'sccache' }}
