Enable rocprof-sys-python

--- a/profiler/artifact-rocprofiler-systems.toml
+++ b/profiler/artifact-rocprofiler-systems.toml
@@ -13,5 +13,6 @@ include = [
 [components.run."profiler/rocprofiler-systems/stage"]
 include = [
   "bin/**",
-  "share/rocprofiler-systems/**"
+  "share/rocprofiler-systems/**",
+  "lib/python*/**",
 ]
