Add workflow to run functional tests as part of nightly-ci runs
Signed-off-by: Lenine Ajagappane <Lenine.Ajagappane@amd.com>

--- a/.github/workflows/ci_linux.yml
+++ b/.github/workflows/ci_linux.yml
@@ -22,6 +22,9 @@ on:
       benchmark_runs_on:
         type: string
         default: ""
+      run_functional_tests:
+        type: boolean
+        default: false
       expect_failure:
         type: boolean
       use_prebuilt_artifacts:
@@ -115,6 +118,34 @@ jobs:
       artifact_group: ${{ inputs.artifact_group }}
       amdgpu_families: ${{ inputs.amdgpu_families }}
       test_runs_on: ${{ inputs.benchmark_runs_on }}
+      artifact_run_id: ${{ inputs.artifact_run_id }}
+
+  test_linux_functional:
+    needs: [build_portable_linux_artifacts]
+    name: Test Linux Functional
+    # Run functional tests if:
+    # - Build succeeded (or using prebuilt artifacts)
+    # - Not expecting failure
+    # - Test runner is available (test_runs_on is set)
+    # - Functional flag is enabled (only set to true in ci_nightly.yml)
+    if: >-
+      ${{
+        !failure() &&
+        !cancelled() &&
+        (
+          inputs.use_prebuilt_artifacts == 'false' ||
+          inputs.use_prebuilt_artifacts == 'true'
+        ) &&
+        inputs.expect_failure == false &&
+        inputs.test_runs_on != '' &&
+        inputs.run_functional_tests == true
+      }}
+    uses: ./.github/workflows/test_functional.yml
+    secrets: inherit
+    with:
+      artifact_group: ${{ inputs.artifact_group }}
+      amdgpu_families: ${{ inputs.amdgpu_families }}
+      test_runs_on: ${{ inputs.test_runs_on }}
       artifact_run_id: ${{ inputs.artifact_run_id }}
 
   build_portable_linux_python_packages:
